--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,46 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<!--  <ion-split-pane>-->
+    <ion-menu menuId="main-menu" content-id="main">
+      <ion-header>
+        <ion-toolbar color="cornflowerblue" class="user-profile">
+
+          <ion-item margin-bottom>
+            <ion-label>
+              <ion-text color="blue">
+                <h1><strong></strong></h1>
+              </ion-text>
+              <ion-menu-toggle class="mto" auto-hide="false">
+                <a class="text08" tappable (click)="logout()">
+                  <ion-text color="medium">
+                    <ion-icon name="log-out"></ion-icon>
+                    <strong>logout</strong>
+                  </ion-text>
+                </a>
+              </ion-menu-toggle>
+            </ion-label>
+          </ion-item>
+
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content class="bg-profile">
+        <ion-list>
+          <ion-list-header color="dark">
+            <ion-label>Menu</ion-label>
+          </ion-list-header>
+
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+            <ion-item [routerLink]="[p.url]" color="primary">
+              <ion-icon slot="start" [name]="p.icon" color="light"></ion-icon>
+              <ion-label>
+                {{p.title}}
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+<!--  <p>{{order.des}}</p>-->
+    <ion-router-outlet id="main"></ion-router-outlet>
+<!--  </ion-split-pane>-->
 </ion-app>
